latest changes for demo